--- a/index.html
+++ b/index.html
@@ -8,9 +8,25 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<div class="topnav">
+	<div class="leftTopNav">
+			<button>About</button>
+			<button>Store</button>
+		</div>
+		<div class="rightTopNav">
+			<button>Gmail</button>
+			<button>Images</button>
+			<img src="images/outline_apps_black_24dp.png" class="apps" alt="apps icon">
+			<img src="images/outline_account_circle_black_24dp.png" class="account" alt="apps icon">
+			
+		</div>
+
+
+
+	</div>
 	<div class="container">
 		<div class="logo">
-			<img src="googlelogo_color_272x92dp.png" alt="Google logo">
+			<img src="images/googlelogo_color_272x92dp.png" alt="Google logo">
 		</div>
 		<div class="searchbar">
 			<form id="form"> 
