fixed navbar and search bar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div class="topnav">
-	<div class="leftTopNav">
+		<div class="leftTopNav">
 			<button>About</button>
 			<button>Store</button>
 		</div>
@@ -17,25 +17,28 @@
 			<button>Gmail</button>
 			<button>Images</button>
 			<img src="images/outline_apps_black_24dp.png" class="apps" alt="apps icon">
-			<img src="images/outline_account_circle_black_24dp.png" class="account" alt="apps icon">
-			
+			<img src="images/outline_account_circle_black_24dp.png" class="account" alt="apps icon" width="25px" height="25px" >	
 		</div>
-
-
-
 	</div>
+
+
+
 	<div class="container">
 		<div class="logo">
 			<img src="images/googlelogo_color_272x92dp.png" alt="Google logo">
 		</div>
 		<div class="searchbar">
+			
 			<form id="form"> 
+				<img src="images/outline_search_black_24dp.png">
 				<input type="search" id="query" name="q" placeholder="">
+				<img src="images/outline_mic_black_24dp.png">
+			</form>
+		
 		</div>
 		<div class="searchbutton">
 			<button>Google Search</button>
 			<button>I'm Feeling Lucky</button>
-			</form>
 		</div>
 	</div>
 </body>
