--- a/index.html
+++ b/index.html
@@ -21,25 +21,35 @@
 		</div>
 	</div>
 
-
-
 	<div class="container">
 		<div class="logo">
 			<img src="images/googlelogo_color_272x92dp.png" alt="Google logo">
 		</div>
 		<div class="searchbar">
-			
 			<form id="form"> 
-				<img src="images/outline_search_black_24dp.png">
+				<img src="images/outline_search_black_24dp.png" style="opacity: 0.2;">
 				<input type="search" id="query" name="q" placeholder="">
-				<img src="images/outline_mic_black_24dp.png">
+				<img src="images/outline_mic_black_24dp.png" style="opacity: 0.2;">
 			</form>
-		
 		</div>
 		<div class="searchbutton">
 			<button>Google Search</button>
 			<button>I'm Feeling Lucky</button>
 		</div>
+	</div>
+
+	<div class="botNav">
+		<div class="leftBotNav">
+			<button>Advertising</button>
+			<button>Business</button>
+			<button>How Search works</button>
+		</div>
+		<div class="rightBotNav">
+			<button>Privacy</button>
+			<button>Terms</button>
+			<button>Settings</button>
+		</div>
+
 	</div>
 </body>
 </html>
